src/test/ui/parser/issues/issue-67146-negative-outlives-bound-syntactic-fail.stderr
error: negative bounds are not supported
  --> $DIR/issue-67146-negative-outlives-bound-syntactic-fail.rs:9:12
   |
LL | pub fn f1<T: !'static>() {}
   |            ^^^^^^^^^^ negative bounds are not supported

error: negative bounds are not supported
  --> $DIR/issue-67146-negative-outlives-bound-syntactic-fail.rs:11:22
   |
LL | pub fn f2<'a, T: Ord + !'a>() {}
   |                      ^^^^^ negative bounds are not supported

error: negative bounds are not supported
  --> $DIR/issue-67146-negative-outlives-bound-syntactic-fail.rs:13:16
   |
LL | pub fn f3<'a, T: !'a + Ord>() {}
   |                ^^^^^ negative bounds are not supported

error: aborting due to 3 previous errors

